correction iphone/ipad

--- a/public/js/style.css
+++ b/public/js/style.css
@@ -2,6 +2,8 @@
 	font-family: "Avenir next", sans-serif;
 	color: white;
 	background-color: black;
+	margin: 0px;
+	padding: 0px;
 }	
 button {
 	border-radius: 5px;
@@ -27,14 +29,14 @@ button:hover {
 }
 .external_container {
 	position: absolute;
-	height: calc(100% - 150px);
+	height: calc(100% - 100px);
 	width: 100%;
 	z-index: -1;
 }
 .content {
 	font-size: 60px;
 	height: 100%;
-	overflow: hidden;/*scroll;*/
+	/*overflow: hidden;*//*scroll;*/
 	margin: 20px; 
 	border: 5px solid transparent;
 	padding: 20px;
